tests222/tests/test39.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: variable printi is not defined
^
